# image_renderer

./: .gitignore  README.md  blender.py  pyproject.toml  render.py  requirement.txt  run_render.py
image_renderer/: MetadataExtractor.py  Renderer.py  __init__.py  blender.py  utlis.py
sample_output/: metadata.json
src/: __init__.py  blender.py
test/: TestRenderer.py
tests/: TestRenderer.py  __init__.py
