[tool.poetry]
name = "image-renderer"
version = "0.1.7"
description = "Render 3D model to multi-view images (or contours/sketches) with blender."
authors = ["YI HE <yi.he.vd@hitachi.com>"]
readme = "README.md"
packages = [
    { include = "image_renderer", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11.dev0"
bpy = "^4.0.0"
fire = "^0.5.0"
numpy = "^1.26.2"
loguru = "^0.7.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
